fix: tix order summary spacing

--- a/src/blocks/_tickets.scss
+++ b/src/blocks/_tickets.scss
@@ -12,6 +12,14 @@
   padding: 16px 24px;
 }
 
+.tix-payment-method{
+  display: none;
+}
+
+tr[class^="tix-row"] td {
+  padding: 16px 24px;
+}
+
 #tix {
   padding-top: 0;
 
